--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             padding: 0;
             height: 100vh;
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color:lightblue;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
         .login-container {
-            width: 320px;
+            width: 350px;
             background-color: #ffffff;
             padding: 30px;
             border-radius: 8px;
