--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         .login-container input {
             width: 100%;
             padding: 10px;
-            margin: 10px 0;
+            margin: 10px;
             border-radius: 5px;
             border: 1px solid #ccc;
             font-size: 14px;
