--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             height: 100vh;
             font-family: Arial, sans-serif;
-            background-color: #f3f3f3;
+            background-color:skyblue;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -49,7 +49,7 @@
 
         /* Button */
         .login-container button {
-            width: 100%;
+            width: 600px;
             padding: 14px;
             background-color: #0d6efd;
             color: #ffffff;
